--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+  background-color: #F5F5F5;
 }
 
 .navbar-center .active {
