--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 @plugin "daisyui";
 
@@ -7,21 +7,35 @@ body {
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  background-color: #F5F5F5;
+  background-color: #f5f5f5;
 }
 
 .navbar-center .active {
-    font-weight: 600;
+  font-weight: 600;
 
-    background: linear-gradient(to right, #632EE3, #9F62F2);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    background-clip: text;
-    color: transparent;
+  background: linear-gradient(to right, #632ee3, #9f62f2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
 
-    border-bottom: 2px solid;
-    border-image: linear-gradient(to right, #632EE3, #9F62F2) 1;
-    border-image-slice: 1;
+  border-bottom: 2px solid;
+  border-image: linear-gradient(to right, #632ee3, #9f62f2) 1;
+  border-image-slice: 1;
 
-    /* display: inline-block; */
+  display: inline-block;
+}
+
+@keyframes slideIn {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+.animate-slideIn {
+  animation: slideIn 1s ease =-out forwards;
 }
