--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body {
   display: inline-block;
 }
 
-@keyframes slideIn {
+/* @keyframes slideIn {
   0% {
     opacity: 0;
     transform: translateX(100px);
@@ -38,4 +38,19 @@ body {
 }
 .animate-slideIn {
   animation: slideIn 1s ease =-out forwards;
-}
+} */
+
+/* @theme {
+  --animate-rise-in: rise 5s ease-out;
+
+  @-keyframes rise {
+    0% {
+      transform: translateY(30px);
+      opacity: 0.2s;
+    }
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+} */
