--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,16 @@ body {
   border-image-slice: 1;
   display: inline-block;
 }
+
+.bottom-menu-small .active {
+  font-weight: 600;
+  background-color: #9e62f262;
+  width: 100%;
+  border-radius: 8px;
+}
+/* .bottom-menu-small .active div{
+  padding: 4px 0;
+  background-color: #9e62f262;
+  width: 100%;
+  border-radius: 8px;
+} */
